Refactor service classes to eliminate session management and improve initialization logic